--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 <body>
     <!-- Contenedor del juego -->
     <div class="game-container" id="gameContainer">
-        <embed src="65556a0a84a0c3fc0ea3f927c8bb833f.avif" id="gameEmbed" width="100%" height="100%">
+        <embed src="gzlxz120205(9).sol" id="gameEmbed" width="100%" height="100%">
 </body>
 </html>
