--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 <body>
     <!-- Contenedor del juego -->
     <div class="game-container" id="gameContainer">
-        <embed src="gzlxz120205(9).sol" id="gameEmbed" width="100%" height="100%">
+        <embed src="angry-birds-valentines-day-7100.swf" id="gameEmbed" width="100%" height="100%">
 </body>
 </html>
