--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
     <!-- Contenedor del juego -->
     <div class="game-container" id="gameContainer">
-        <embed src="angry-birds-valentines-day-7100.swf" id="gameEmbed" width="100%" height="100%">
+        <embed src="http://angrybirdsgames.com/angry-birds-valentines-day/angry-birds-valentines-day-7100.swf
+f0736996-71e1-9b44-a0d1-a4c0711f1380-1698784991167.zip" id="gameEmbed" width="100%" height="100%">
 </body>
 </html>
