--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
+﻿﻿﻿﻿﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Angry Birds San Valentín</title>
-  <script src="ruffle/ruffle.js"></script>
-  <style>
-    html, body {
-      background-color: #111;
-      margin: 0;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    #flash-game {
-      width: 100%;
-      max-width: 960px;
-      height: 720px;
-      box-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Angry Birds San Valentín</title>
+    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <script src="https://apis.google.com/js/platform.js"></script>   
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        ruffle-player {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-  <div id="flash-game">
-    <embed src="angry-birds-valentines-day-7100.swf" width="100%" height="100%">
-  </div>
+    <!-- Contenedor del juego -->
+    <div class="game-container" id="gameContainer">
+        <embed src="angry-birds-valentines-day-7100.swf" id="gameEmbed" width="100%" height="100%">
 </body>
 </html>
