--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
-﻿﻿﻿﻿﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angry Birds San Valentín</title>
-    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-    <script src="https://apis.google.com/js/platform.js"></script>   
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-        ruffle-player {
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Angry Birds Valentines Day</title>
+  <!-- Carga la versión nightly del 2025-06-06 desde el CDN oficial -->
+  <script src="https://ruffle.rs/nightly/2025-06-06/ruffle.js"></script>
+  <style>
+    body {
+      background: #111;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    ruffle-player {
+      width: 800px;
+      height: 600px;
+    }
+  </style>
 </head>
 <body>
-    <!-- Contenedor del juego -->
-    <div class="game-container" id="gameContainer">
-        <embed src="angry-birds-valentines-day-7100.swf" id="gameEmbed" width="100%" height="100%">
+  <!-- Aquí se carga el archivo SWF -->
+  <ruffle-player src="angry-birds-valentines-day-7100.swf"></ruffle-player>
 </body>
 </html>
